Fix build issue for Mac OSX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ if(USE_CLOCK_GETTIME)
 	if(HAVE_CLOCK_GETTIME)
 		set(COMMON_LDFLAGS "${COMMON_LDFLAGS} -lrt")
 	endif(HAVE_CLOCK_GETTIME)
+	set(CMAKE_REQUIRED_FLAGS "")
 endif(USE_CLOCK_GETTIME)
 
 if(USE_GTIMER AND NOT FOUND_CLOCK)
